tests/elab_fail/structSorryBug.lean.out.expected
structSorryBug.lean:3:19-3:25: error(lean.unknownIdentifier): Unknown identifier `HasArr`

Note: It is not possible to treat `HasArr` as an implicitly bound variable here because it has multiple characters while the `relaxedAutoImplicit` option is set to `false`.
structSorryBug.lean:5:17-5:32: error: invalid {...} notation, structure type expected
  Nat
