tests/elab_fail/structSorryBug.lean
set_option relaxedAutoImplicit false
set_option warning.nonClassInstance false in
instance has_arr : HasArr Preorder := { Arr := Function }

def foo : Nat := { first := 10 }
